--- a/Yelp API/Philadelphia_Project.ipynb
+++ b/Yelp API/Philadelphia_Project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +275,146 @@
        "      <td>-75.170027</td>\n",
        "      <td>Cheese Shops</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>The Fresh Grocer of Grays Ferry</td>\n",
+       "      <td>39.939315</td>\n",
+       "      <td>-75.193873</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>The Fresh Grocer of Monument Road</td>\n",
+       "      <td>40.002340</td>\n",
+       "      <td>-75.213780</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>ShopRite - Parkside</td>\n",
+       "      <td>39.979546</td>\n",
+       "      <td>-75.224838</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Chai Hong Market</td>\n",
+       "      <td>39.921570</td>\n",
+       "      <td>-75.158707</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Food &amp; Friends</td>\n",
+       "      <td>39.948300</td>\n",
+       "      <td>-75.174140</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Oregon Market</td>\n",
+       "      <td>39.913826</td>\n",
+       "      <td>-75.153595</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Su Xing House</td>\n",
+       "      <td>39.950215</td>\n",
+       "      <td>-75.166346</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Hmart</td>\n",
+       "      <td>40.165890</td>\n",
+       "      <td>-74.875830</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Han Dynasty</td>\n",
+       "      <td>39.956711</td>\n",
+       "      <td>-75.197103</td>\n",
+       "      <td>Szechuan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Heung Fa Chun Sweet House</td>\n",
+       "      <td>39.953906</td>\n",
+       "      <td>-75.156261</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Asian Bamboo House</td>\n",
+       "      <td>40.050018</td>\n",
+       "      <td>-74.989493</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Swarthmore CO-OP</td>\n",
+       "      <td>39.902372</td>\n",
+       "      <td>-75.348925</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Beijing Restaurant</td>\n",
+       "      <td>39.951004</td>\n",
+       "      <td>-75.198066</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Hue Fusion Food Market</td>\n",
+       "      <td>39.979339</td>\n",
+       "      <td>-75.161205</td>\n",
+       "      <td>Delis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Tai Lake Restaurant</td>\n",
+       "      <td>39.954660</td>\n",
+       "      <td>-75.156340</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Lee's Market</td>\n",
+       "      <td>40.089259</td>\n",
+       "      <td>-75.291011</td>\n",
+       "      <td>Fruits &amp; Veggies</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>The Fresh Grocer - Progress Plaza</td>\n",
+       "      <td>39.976663</td>\n",
+       "      <td>-75.157783</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Dim Sum Garden</td>\n",
+       "      <td>39.955399</td>\n",
+       "      <td>-75.156727</td>\n",
+       "      <td>Dim Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Produce Market</td>\n",
+       "      <td>39.954740</td>\n",
+       "      <td>-75.156590</td>\n",
+       "      <td>Fruits &amp; Veggies</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>ShopRite of Brookhaven</td>\n",
+       "      <td>39.880111</td>\n",
+       "      <td>-75.395955</td>\n",
+       "      <td>Grocery</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -311,6 +451,26 @@
        "27                            Trader Joe's  39.889539 -74.923807   \n",
        "28                        Usha Food Market  40.044663 -75.529633   \n",
        "29                          Di Bruno Bros.  39.951760 -75.170027   \n",
+       "30         The Fresh Grocer of Grays Ferry  39.939315 -75.193873   \n",
+       "31       The Fresh Grocer of Monument Road  40.002340 -75.213780   \n",
+       "32                     ShopRite - Parkside  39.979546 -75.224838   \n",
+       "33                        Chai Hong Market  39.921570 -75.158707   \n",
+       "34                          Food & Friends  39.948300 -75.174140   \n",
+       "35                           Oregon Market  39.913826 -75.153595   \n",
+       "36                           Su Xing House  39.950215 -75.166346   \n",
+       "37                                   Hmart  40.165890 -74.875830   \n",
+       "38                             Han Dynasty  39.956711 -75.197103   \n",
+       "39               Heung Fa Chun Sweet House  39.953906 -75.156261   \n",
+       "40                      Asian Bamboo House  40.050018 -74.989493   \n",
+       "41                        Swarthmore CO-OP  39.902372 -75.348925   \n",
+       "42                      Beijing Restaurant  39.951004 -75.198066   \n",
+       "43                  Hue Fusion Food Market  39.979339 -75.161205   \n",
+       "44                     Tai Lake Restaurant  39.954660 -75.156340   \n",
+       "45                            Lee's Market  40.089259 -75.291011   \n",
+       "46       The Fresh Grocer - Progress Plaza  39.976663 -75.157783   \n",
+       "47                          Dim Sum Garden  39.955399 -75.156727   \n",
+       "48                          Produce Market  39.954740 -75.156590   \n",
+       "49                  ShopRite of Brookhaven  39.880111 -75.395955   \n",
        "\n",
        "            categories  \n",
        "0              Grocery  \n",
@@ -342,10 +502,30 @@
        "26             Grocery  \n",
        "27             Grocery  \n",
        "28             Grocery  \n",
-       "29        Cheese Shops  "
+       "29        Cheese Shops  \n",
+       "30             Grocery  \n",
+       "31             Grocery  \n",
+       "32             Grocery  \n",
+       "33             Grocery  \n",
+       "34             Grocery  \n",
+       "35             Grocery  \n",
+       "36             Chinese  \n",
+       "37             Grocery  \n",
+       "38            Szechuan  \n",
+       "39             Chinese  \n",
+       "40             Chinese  \n",
+       "41             Grocery  \n",
+       "42             Chinese  \n",
+       "43               Delis  \n",
+       "44             Chinese  \n",
+       "45    Fruits & Veggies  \n",
+       "46             Grocery  \n",
+       "47             Dim Sum  \n",
+       "48    Fruits & Veggies  \n",
+       "49             Grocery  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +558,7 @@
     "DEFAULT_LOCATION = 'Philadelphia, PA'\n",
     "\n",
     "#edit to allow for number of results wanted \n",
-    "SEARCH_LIMIT = 30;\n",
+    "SEARCH_LIMIT = 50;\n",
     "\n",
     "url_params_grocery = {\n",
     "    'term': grocery.replace(' ', '+'),\n",
@@ -395,7 +575,7 @@
     "response_grocery = requests.request('GET', url, headers=headers, params=url_params_grocery)\n",
     "groc = response_grocery.json()\n",
     "total_count = groc['total']\n",
-    "\n",
+    "total_count\n",
     "\n",
     "\n",
     "df = pd.DataFrame.from_dict(json_normalize(groc['businesses']), orient='columns')\n",
@@ -411,6 +591,7 @@
     "print(\"Total number of grocery stores in the area: \" + str(total_count))\n",
     "\n",
     "final_grocery.column = final_grocery.columns = ['grocery store', 'latitude', 'longitude', 'categories']\n",
+    "final_grocery.to_csv('chinese_grocery_store_pp.csv', encoding='utf-8', index=False)\n",
     "final_grocery"
    ]
   },
@@ -423,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -682,6 +863,146 @@
        "      <td>-75.156277</td>\n",
        "      <td>Chinese</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Dump-N-Roll</td>\n",
+       "      <td>39.954731</td>\n",
+       "      <td>-75.205368</td>\n",
+       "      <td>Food Trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Golden Empress Garden</td>\n",
+       "      <td>39.941938</td>\n",
+       "      <td>-75.152868</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Sang Kee Asian Bistro</td>\n",
+       "      <td>40.002175</td>\n",
+       "      <td>-75.277422</td>\n",
+       "      <td>Asian Fusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Mandarin House</td>\n",
+       "      <td>39.968970</td>\n",
+       "      <td>-75.134629</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Mandarin Palace</td>\n",
+       "      <td>39.951889</td>\n",
+       "      <td>-75.171803</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Sang Kee Noodle House</td>\n",
+       "      <td>39.954876</td>\n",
+       "      <td>-75.193933</td>\n",
+       "      <td>Dim Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Beijing Restaurant</td>\n",
+       "      <td>39.951004</td>\n",
+       "      <td>-75.198066</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Spicy Memory</td>\n",
+       "      <td>39.948947</td>\n",
+       "      <td>-75.159238</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Andorra Ping Pong</td>\n",
+       "      <td>40.062336</td>\n",
+       "      <td>-75.237488</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Tom's Dim Sum</td>\n",
+       "      <td>39.953112</td>\n",
+       "      <td>-75.157902</td>\n",
+       "      <td>Dim Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Morimoto</td>\n",
+       "      <td>39.949665</td>\n",
+       "      <td>-75.153273</td>\n",
+       "      <td>Japanese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Dim Sum House</td>\n",
+       "      <td>39.955771</td>\n",
+       "      <td>-75.201654</td>\n",
+       "      <td>Dim Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Chili Szechuan</td>\n",
+       "      <td>39.956450</td>\n",
+       "      <td>-75.206750</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Fortune Chinese Restaurant</td>\n",
+       "      <td>39.944506</td>\n",
+       "      <td>-75.172835</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Square on Square</td>\n",
+       "      <td>39.952102</td>\n",
+       "      <td>-75.172133</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>China House II</td>\n",
+       "      <td>39.910700</td>\n",
+       "      <td>-75.231873</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Best China Inn</td>\n",
+       "      <td>39.954126</td>\n",
+       "      <td>-75.211274</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>I Tea</td>\n",
+       "      <td>39.963060</td>\n",
+       "      <td>-75.164148</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Yu Hsiang Garden</td>\n",
+       "      <td>40.067348</td>\n",
+       "      <td>-75.196995</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>David's Mai Lai Wah</td>\n",
+       "      <td>39.955730</td>\n",
+       "      <td>-75.156220</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -718,6 +1039,26 @@
        "27                     E Mei Restaurant  39.953730 -75.155390   \n",
        "28            Heung Fa Chun Sweet House  39.953906 -75.156261   \n",
        "29                       Empress Garden  39.953835 -75.156277   \n",
+       "30                          Dump-N-Roll  39.954731 -75.205368   \n",
+       "31                Golden Empress Garden  39.941938 -75.152868   \n",
+       "32                Sang Kee Asian Bistro  40.002175 -75.277422   \n",
+       "33                       Mandarin House  39.968970 -75.134629   \n",
+       "34                      Mandarin Palace  39.951889 -75.171803   \n",
+       "35                Sang Kee Noodle House  39.954876 -75.193933   \n",
+       "36                   Beijing Restaurant  39.951004 -75.198066   \n",
+       "37                         Spicy Memory  39.948947 -75.159238   \n",
+       "38                    Andorra Ping Pong  40.062336 -75.237488   \n",
+       "39                        Tom's Dim Sum  39.953112 -75.157902   \n",
+       "40                             Morimoto  39.949665 -75.153273   \n",
+       "41                        Dim Sum House  39.955771 -75.201654   \n",
+       "42                       Chili Szechuan  39.956450 -75.206750   \n",
+       "43           Fortune Chinese Restaurant  39.944506 -75.172835   \n",
+       "44                     Square on Square  39.952102 -75.172133   \n",
+       "45                       China House II  39.910700 -75.231873   \n",
+       "46                       Best China Inn  39.954126 -75.211274   \n",
+       "47                                I Tea  39.963060 -75.164148   \n",
+       "48                     Yu Hsiang Garden  40.067348 -75.196995   \n",
+       "49                  David's Mai Lai Wah  39.955730 -75.156220   \n",
        "\n",
        "              categories  \n",
        "0               Szechuan  \n",
@@ -749,10 +1090,30 @@
        "26          Asian Fusion  \n",
        "27              Szechuan  \n",
        "28               Chinese  \n",
-       "29               Chinese  "
+       "29               Chinese  \n",
+       "30           Food Trucks  \n",
+       "31               Chinese  \n",
+       "32          Asian Fusion  \n",
+       "33               Chinese  \n",
+       "34               Chinese  \n",
+       "35               Dim Sum  \n",
+       "36               Chinese  \n",
+       "37               Chinese  \n",
+       "38               Chinese  \n",
+       "39               Dim Sum  \n",
+       "40              Japanese  \n",
+       "41               Dim Sum  \n",
+       "42               Chinese  \n",
+       "43               Chinese  \n",
+       "44               Chinese  \n",
+       "45               Chinese  \n",
+       "46               Chinese  \n",
+       "47               Chinese  \n",
+       "48               Chinese  \n",
+       "49               Chinese  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +1146,7 @@
     "DEFAULT_LOCATION = 'Philadelphia, PA'\n",
     "\n",
     "#edit to allow for number of results wanted \n",
-    "SEARCH_LIMIT = 30;\n",
+    "SEARCH_LIMIT = 50;\n",
     "\n",
     "url_params_food = {\n",
     "    'term': food.replace(' ', '+'),\n",
@@ -817,17 +1178,9 @@
     "print(\"Total number of grocery stores in the area: \" + str(total_count))\n",
     "\n",
     "final_food.column = final_food.columns = ['food', 'latitude', 'longitude', 'categories']\n",
+    "final_food.to_csv('chinese_food_pp.csv', encoding='utf-8', index=False)\n",
     "final_food"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
